# starmer-as-a-service

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
keiths/: DS3A8016.jpg~  keithcTIf  keiths.csv
starmer_as_a_service/: main.py
tests/: test_starmer_as_a_service.py
