[tool.poetry]
name = "starmer-as-a-service"
version = "0.1.0"
description = ""
authors = ["Paul Cowie <paul.cowie@ntlworld.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
